<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/departure_station_search_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="32dp"
            android:hint="@string/departure_station_hint"
            android:labelFor="@id/departure_station_search"
            app:boxCornerRadiusBottomEnd="32dp"
            app:boxCornerRadiusBottomStart="32dp"
            app:boxCornerRadiusTopEnd="32dp"
            app:boxCornerRadiusTopStart="32dp">

            <AutoCompleteTextView
                android:inputType="text"
                android:id="@+id/departure_station_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:padding="20dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/arrival_station_search_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginBottom="32dp"
            android:hint="@string/arrival_station_hint"
            android:labelFor="@id/arrival_station_search"
            app:boxCornerRadiusBottomEnd="32dp"
            app:boxCornerRadiusBottomStart="32dp"
            app:boxCornerRadiusTopEnd="32dp"
            app:boxCornerRadiusTopStart="32dp">

            <AutoCompleteTextView
                android:inputType="text"
                android:id="@+id/arrival_station_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:padding="20dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.tabs.TabLayout
            android:visibility="gone"
            android:animateLayoutChanges="true"
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tomorrow" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_date" />
        </com.google.android.material.tabs.TabLayout>
        
        <androidx.recyclerview.widget.RecyclerView
            android:padding="16dp"
            android:clipToPadding="false"
            android:id="@+id/travels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>